# zarrdump

./: .gitlab-ci.yml  CONTRIBUTING.rst  Cargo.toml  Dockerfile  README.md
src/: main.rs
